tests/baselines/reference/restParametersOfNonArrayTypes.errors.txt
==== tests/cases/compiler/restParametersOfNonArrayTypes.ts (14 errors) ====
    // Rest parameters must be an array type if they have a type annotation, so all these are errors
    
    function foo(...x: string) { }
                 ~~~~~~~~~~~~
!!! restParametersOfNonArrayTypes.ts(3,14): error TS2162: A rest parameter must be of an array type.
    var f = function foo(...x: number) { }
                         ~~~~~~~~~~~~
!!! restParametersOfNonArrayTypes.ts(4,22): error TS2162: A rest parameter must be of an array type.
    var f2 = (...x: Date, ...y: boolean) => { }
              ~~~~~~~~~~
!!! restParametersOfNonArrayTypes.ts(5,11): error TS1014: A rest parameter must be last in a parameter list.
                          ~~~~~~~~~~~~~
!!! restParametersOfNonArrayTypes.ts(5,23): error TS2162: A rest parameter must be of an array type.
    
    class C {
        foo(...x: C) { }
            ~~~~~~~
!!! restParametersOfNonArrayTypes.ts(8,9): error TS2162: A rest parameter must be of an array type.
    }
    
    interface I {
        (...x: string);
         ~~~~~~~~~~~~
!!! restParametersOfNonArrayTypes.ts(12,6): error TS2162: A rest parameter must be of an array type.
        foo(...x: number, ...y: number);
            ~~~~~~~~~~~~
!!! restParametersOfNonArrayTypes.ts(13,9): error TS1014: A rest parameter must be last in a parameter list.
                          ~~~~~~~~~~~~
!!! restParametersOfNonArrayTypes.ts(13,23): error TS2162: A rest parameter must be of an array type.
    }
    
    var a: {
        (...x: string);
         ~~~~~~~~~~~~
!!! restParametersOfNonArrayTypes.ts(17,6): error TS2162: A rest parameter must be of an array type.
        foo(...x: string);
            ~~~~~~~~~~~~
!!! restParametersOfNonArrayTypes.ts(18,9): error TS2162: A rest parameter must be of an array type.
    }
    
    var b = {
        foo(...x: string) { },
            ~~~~~~~~~~~~
!!! restParametersOfNonArrayTypes.ts(22,9): error TS2162: A rest parameter must be of an array type.
        a: function foo(...x: number, ...y: Date) { },
                        ~~~~~~~~~~~~
!!! restParametersOfNonArrayTypes.ts(23,21): error TS1014: A rest parameter must be last in a parameter list.
                                      ~~~~~~~~~~
!!! restParametersOfNonArrayTypes.ts(23,35): error TS2162: A rest parameter must be of an array type.
        b: (...x: string) => { }
            ~~~~~~~~~~~~
!!! restParametersOfNonArrayTypes.ts(24,9): error TS2162: A rest parameter must be of an array type.
    }